feature auth validata
