# src/routes/auth.ts
@@ -3,6 +3,7 @@ import catchAsync from "../utils/response";
 import * as userService from "../services/userService";
 import { z } from 'zod';
 import { validate } from "../utils/validators";
+import { profile } from "node:console";
 
 const router: Router = Router();
 
@@ -57,16 +58,29 @@ router.post("/login", catchAsync(async (req: Request, res: Response) => {
 
       return res.status(200).json({
         success: true,
+        data: {
+          token: result.token,
+          user: {
+            uuid: result.user.uuid,
+            name: result.user.name,
+            profile_image: null
+          },
+          meta: null,
+        },
         error: null,
       });
     }
 
-    throw new AppError(401, "로그인 실패.");
+    throw new AppError(401, "오류가 발생했습니다.");
   }),
 );
 
 // --- [로그아웃] ---
 router.post("/logout", catchAsync(async (req: Request, res: Response) => {
+    const token = req.cookies.accessToken;
+    if (!token) {
+        throw new AppError(400, "인증 정보가 없습니다.");
+    }
     res.clearCookie("accessToken", {
       httpOnly: true,
       secure: process.env.NODE_ENV === "production",
